[project]
name = "learning-path-evaluator"
version = "0.1.0"
description = "An environment where an AI agent evaluates student learning paths and identifies gaps in study order."
authors = [
    { name = "Prabhav" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["environment", "inference", "app"]
